Rewrited AutoCompletion, MyArray , MyStackInt, isAnagram